# pasgobject

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: ARCHITECTURE.md  building.md  index.md  ownership.md  subclassing.md
docs/gobject/: GLib.md  GObject.md  GObjectType.md  GParam.md  GSignal.md  GTypes.md  GValue.md
docs/gtk4/: overview.md
docs/tools/: gir2pas.md
gobject/: meson.build
gobject/examples/: custom_object.pas  hello_gobject.pas  meson.build
gobject/src/: GLib.pas  GObject.pas  GObjectType.pas  GParam.pas  GSignal.pas  GTypes.pas  GValue.pas  PasGObject.pas
gobject/src/Internal/: GLibFFI.pas  GObjectFFI.pas
gobject/tests/: TestGObject.pas  TestGTypes.pas  TestSignals.pas  meson.build
gtk4/: meson.build
gtk4/examples/: hello_window.pas  meson.build
gtk4/src/: GtkApplication.pas  GtkBox.pas  GtkButton.pas  GtkClasses.pas  GtkLabel.pas  GtkTypes.pas  GtkWidget.pas  GtkWindow.pas  PasGTK.pas
gtk4/src/Internal/: Gtk4FFI.pas  GtkFFI.pas
gtk4/tests/: TestGtk.pas  meson.build
tools/: meson.build
tools/gir2pas/: gir2pas.pas  meson.build
